[tool.poetry]
name = "python-build-systems"
version = "0.1.0"
description = "I'm exploring Python Build Systems and the tools built around them and these are my notes."
authors = ["Hasan Sezer Taşan <hasansezertasan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
mkdocs = {extras = ["i18n"], version = "^1.5.3"}
mkdocs-material = "9.4.7"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
mypy = ">=1.0.0"
ruff = "==0.2.0"
pre-commit = ">=2.20.0, <4.0.0"
yamllint = "^1.32.0"
pymarkdownlnt = "^0.9.16"

[tool.pymarkdown]
plugins.MD013.enabled = false
plugins.MD003.style = "atx"
plugins.MD004.style = "asterisk"
plugins.MD007.indent = 4
# Escape disables...
plugins.MD033.enabled = false
plugins.MD041.enabled = false
plugins.MD022.enabled = false
plugins.MD003.enabled = false
